--- a/main.css
+++ b/main.css
@@ -30,6 +30,20 @@
 }
 
 
+/* Styles for mobile devices */
+@media (max-width: 767px) {
+  /* Add your mobile styles here */
+}
+
+/* Styles for tablets */
+@media (min-width: 768px) and (max-width: 1023px) {
+  /* Add your tablet styles here */
+}
+
+/* Styles for desktop devices */
+@media (min-width: 1024px) {
+  /* Add your desktop styles here */
+}
 
 
 
