--- a/main.css
+++ b/main.css
@@ -446,7 +446,9 @@ footer p {
   }
 
   .pricing-package {
-    margin-bottom: 20px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
   
   .pricing-package ul {
