--- a/main.css
+++ b/main.css
@@ -439,6 +439,27 @@ footer p {
 
 /* Styles for mobile devices */
 /* Styles for iPhone 12 mini screen */
+@media (max-width: 375px) {
+    
+    
+  .pricing-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pricing-package {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .pricing-package ul {
+    font-size: 12px;
+    line-height: 1.4;
+  }
+}
+
+/* Styles for mobile devices */
 @media (max-width: 767px) {
   .pricing-package {
     flex-direction: column;
