--- a/price.css
+++ b/price.css
@@ -1,5 +1,6 @@
 
-body {
+@media (max-width: 1023px) {
+    body {
   background-color: #000;
   color: #FFF;
   font-family: Arial, sans-serif;
@@ -7,14 +8,14 @@ body {
 
 header {
   background-color: #F9A825;
-  padding: 0px;
+  padding: 10px;
   display: flex;
     flex-direction: column; /* Change flex-direction to column */
   align-items: center;
 }
 
 .logo {
-  width: 100px; /* Adjust the width as needed */
+  width: 200px; /* Adjust the width as needed */
 }
 
 .logo img {
@@ -26,12 +27,222 @@ header {
 }
 
 .title h1 {
-  font-size: 25px;
+    padding: 10px;
+  font-size: 40px;
   margin: 0;
   color: #fff;
 }
 
 nav {
+  margin-left: auto; /* Align navigation to the right */
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 10px;
+  margin: 0;
+  display: flex; /* Use flexbox for spacing */
+  justify-content: flex-end; /* Align items to the right */
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 10px;
+}
+
+nav ul li a {
+    display: none;
+  font-size: 20px;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+  transition: all 0.3s ease; /* Added transition property */
+}
+
+nav ul li a:hover {
+  background-color: #fff;
+  color: #F9A825;
+  border-radius: 5px;
+}
+
+header nav input[type="checkbox"],
+header nav label {
+  display: none;
+}
+
+.background-dark {
+  background-color: #333;
+}
+
+.background-gray {
+  background-color: #666;
+}
+
+#package-details {
+  padding: 15px;
+  text-align: center;
+  margin: 0 auto; /* Center horizontally */
+}
+
+#package-details h2 {
+  color: #F9A825;
+  font-size: 52px;
+  margin-bottom: 50px;
+}
+
+.package-detail {
+  margin-bottom: 30px;
+  margin-top: 50px;
+}
+
+.detail-label {
+  display: block;
+  color: #F9A825;
+  font-size: 40px;
+  margin-bottom: 10px;
+}
+
+.detail-description {
+  display: block;
+    
+  color: #FFF;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.detail-info {
+    
+  text-align: center;
+  color: #CCC;
+  font-size: 20px;
+  line-height: 1.5;
+  max-width: 700px;
+  margin: 0 auto; /* Center horizontally */
+}
+
+#request-info {
+  padding: 20px;
+  text-align: center;
+}
+
+#request-info h3 {
+  color: #F9A825;
+  font-size: 34px;
+  margin-bottom: 40px;
+}
+
+#contact-form {
+    
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.form-group {
+    
+  margin-bottom: 40px;
+}
+
+label {
+  display: block;
+  color: #F9A825;
+  font-size: 40px;
+  margin-bottom: 10px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+  width: 100%;
+  padding: 20px;
+  border-radius: 4px;
+  border: none;
+  background-color: #FFF;
+  color: #333;
+  font-size: 36px;
+}
+
+textarea {
+  resize: vertical;
+  height: 180px;
+    font-size: 30px;
+}
+
+.submit-btn {
+  background-color: #F9A825;
+  color: #FFF;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 120px;
+}
+
+.submit-btn:hover {
+  background-color: #FFB74D;
+}
+
+footer {
+  background-color: #444;
+  padding: 20px;
+  text-align: center;
+}
+
+footer p {
+  margin: 0;
+  color: #FFF;
+}
+
+/* Remove bullet points */
+ul,
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+}
+
+@media (min-width: 1024px) {
+
+
+body {
+  background-color: #000;
+  color: #FFF;
+  font-family: Arial, sans-serif;
+}
+
+header {
+  background-color: #F9A825;
+  padding: 10px;
+  display: flex;
+    flex-direction: column; /* Change flex-direction to column */
+  align-items: center;
+}
+
+.logo {
+
+  width: 150px; /* Adjust the width as needed */
+    margin-top: -30px
+}
+
+.logo img {
+  width: 100%;
+}
+
+.title {
+  margin-left: 10px; /* Adjust the margin as needed */
+    font-size: 15px;
+}
+
+.title h1 {
+    margin-top: 10px
+  
+  margin: 0;
+  color: #fff;
+}
+
+nav {
+    display: inline;
   margin-left: auto; /* Align navigation to the right */
 }
 
@@ -138,7 +349,7 @@ header nav label {
 label {
   display: block;
   color: #F9A825;
-  font-size: 16px;
+  font-size: 30px;
   margin-bottom: 5px;
 }
 
@@ -152,7 +363,7 @@ textarea {
   border: none;
   background-color: #FFF;
   color: #333;
-  font-size: 16px;
+  font-size: 25px;
 }
 
 textarea {
@@ -167,7 +378,7 @@ textarea {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 60px;
 }
 
 .submit-btn:hover {
@@ -194,26 +405,3 @@ li {
 }
 }
 
-@media (max-width: 666px) {
-  header {
-    background-color: #F9A825;
-    padding: 50px;
-    display: flex;
-    flex-direction: column; /* Change flex-direction to column */
-    align-items: center;
-  }
-
-  .logo {
-    width: 100px; /* Adjust the width as needed */
-    margin-top: 10px; /* Add margin-top to create space between logo and title */
-  }
-
-  .logo img {
-    width: 100%;
-  }
-
-
-  nav {
-    display: none; /* Hide the navigation */
-  }
-}
