--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body{margin:0;padding:0;background-color:#0b1b3f;font-family:Arial,sans-serif}
-.module{background:url(background.png) no-repeat center/cover;background-attachment:fixed;background-position:center top 50px;overflow:hidden}
+.module{background:url(background.png) no-repeat center/cover;background-attachment:fixed;background-position:center top 50px;overflow:hidden;width: 100%;}
 header{background-color:transparent;padding:10px;display:flex;align-items:center;justify-content:space-between}
 .logo{width:60px}
 .logo img{width:100%}
@@ -25,7 +25,9 @@ h3{font-size:25px;color:#F9A825}
 .service-item{display:flex;align-items:center;margin:30px 0}
 .logo-overlay{left:50%;transform:translateX(-40%);width:100px;height:100px}
 
-#pricing{color:#000;text-shadow:0 1px 0 white;text-align:center;line-height:1.8}.pricing-container{display:flex;flex-wrap:wrap}.pricing-package{max-width:600px;margin:40px 5vh;padding:20px;background-color:#FDF5E6;border-radius:5px}.pricing-package ul{margin:20px 0}.pricing-package p.price{font-size:20px;font-weight:bold;color:#F9A825}.pricing-package a.btn{display:inline-block;background-color:#F9A825;color:#fff;text-decoration:none;padding:10px 20px;border-radius:5px;transition:all .3s ease}
+#pricing{color:#000;text-shadow:0 1px 0 white;text-align:center;line-height:1.8;padding: 6px;}
+.pricing-container{display:flex;flex-wrap:wrap;justify-content: center;}
+.pricing-package{max-width:600px;margin:40px 5vh;padding:20px;background-color:#FDF5E6;border-radius:5px}.pricing-package ul{margin:20px 0}.pricing-package p.price{font-size:20px;font-weight:bold;color:#F9A825}.pricing-package a.btn{display:inline-block;background-color:#F9A825;color:#fff;text-decoration:none;padding:10px 20px;border-radius:5px;transition:all .3s ease}
 
 #contact {color:#fff;position:relative;overflow:hidden;text-shadow:0 1px 0 black;line-height:1.8;text-align:left;padding:6px;text-align: center;}
 
