--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
-body{margin:0;padding:0;background-color:#0b1b3f;font-family:Arial,sans-serif}
-.module{background:url(background.png) no-repeat center/100% auto;background-attachment:fixed;background-position:center top 50px;overflow:hidden;}
+body{margin:0;padding:0;background-color:#0b1b3f;font-family:Arial,sans-serif;}
+.module{
+    
+    background-position: center;background:url(background.png) no-repeat center;background-attachment:fixed;background-position:center top -50px;overflow:hidden;height: 100vh;position: relative; width: 100vw;}
 header{background-color:transparent;padding:10px;display:flex;align-items:center;justify-content:space-between}
 .logo{width:60px}
 .logo img{width:100%}
