--- a/main.css
+++ b/main.css
@@ -1,6 +1,64 @@
-body{margin:0;padding:0;background-color:#0b1b3f;font-family:Arial,sans-serif}
-.module{background:url(background.png) no-repeat fixed center/100% auto;background-attachment:fixed;background-position:center top 50px;overflow:hidden;width: 100%; height: 100%; position: relative;}
+@media (max-width: 666px) {
 
+body{margin:0;padding:0;background-color:#0b1b3f;font-family:Arial,sans-serif}
+.module {
+  position: relative;
+  z-index: -1;
+}
+
+.module-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.module-bg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+header{background-color:transparent;padding:10px;display:flex;align-items:center;justify-content:space-between}
+.logo{width:60px}
+.logo img{width:100%}
+.title{margin-left:10px}
+.title h1{text-shadow:0 1px 0 black;font-size:24px;margin:0;color:#fff}
+header h1{font-size:20px;margin:0;color:#fff}
+header nav{position:relative;right:-10px}header nav ul{display:none;position:absolute;top:100%;right:-10px;background-color:transparent;padding:10px;margin:35;list-style-type:none;text-align:right}
+header nav ul li{margin-bottom:10px}
+header nav ul li a{text-shadow:0 1px 0 black;display:block;font-size:20px;padding:5px;color:#fff;text-decoration:none}
+header nav input[type="checkbox"]{display:none}
+header nav label{font-size:24px;cursor:pointer;color:#fff}
+header nav input[type="checkbox"]:checked~ul{display:block}
+    
+#about{margin:40vh auto 0;color:#fff;position:relative;max-width:85%}
+#about p{line-height:1.8;position:relative}
+.module>#about{text-shadow:0 1px 0 black;color:#fff;text-align:center;overflow:hidden;width:100%;background:inherit;background:fixed}
+.module>#about::before{content:"";position:absolute;top:20px;left:20px;width:80vw;height:99%;background:inherit;background:fixed;filter:blur(12px)}
+
+#services{color:#fff;position:relative;overflow:hidden;text-shadow:0 1px 0 black;text-align:left;padding:6px;}
+h2{margin-top:20px;font-size:30px;text-align:center;color:#F9A825;border:2px solid #0e1c41;border-radius:5px;background-color:#FDF5E6}
+h3{font-size:25px;color:#F9A825}
+#services p{font-size:20px;color:#fff}
+.service-item{display:flex;align-items:center;margin:30px 0}
+.logo-overlay{left:50%;transform:translateX(-40%);width:100px;height:100px}
+
+#pricing{color:#000;text-shadow:0 1px 0 white;text-align:center;line-height:1.8;padding: 6px;}
+.pricing-container{display:flex;flex-wrap:wrap;justify-content: center;}
+.pricing-package{max-width:600px;margin:40px 5vh;padding:20px;background-color:#FDF5E6;border-radius:5px}.pricing-package ul{margin:20px 0}.pricing-package p.price{font-size:20px;font-weight:bold;color:#F9A825}.pricing-package a.btn{display:inline-block;background-color:#F9A825;color:#fff;text-decoration:none;padding:10px 20px;border-radius:5px;transition:all .3s ease}
+
+#contact {color:#fff;position:relative;overflow:hidden;text-shadow:0 1px 0 black;line-height:1.8;text-align:left;padding:6px;text-align: center;}
+
+footer {text-shadow: 0 1px 0 black;color: #fff;text-align: center;}
+}
+
+@media (min-width: 1023px) {
+body{margin:0;padding:0;background-color:#0b1b3f;font-family:Arial,sans-serif}
+.module{background:url(background.png) no-repeat center/100% auto;background-attachment:fixed;background-position:center top 50px;overflow:hidden;width: 100%; height: 100%; position: relative;}
 header{background-color:transparent;padding:10px;display:flex;align-items:center;justify-content:space-between}
 .logo{width:60px}
 .logo img{width:100%}
@@ -33,6 +91,4 @@ h3{font-size:25px;color:#F9A825}
 #contact {color:#fff;position:relative;overflow:hidden;text-shadow:0 1px 0 black;line-height:1.8;text-align:left;padding:6px;text-align: center;}
 
 footer {text-shadow: 0 1px 0 black;color: #fff;text-align: center;}
-
-
-
+}
